# FalconView

./: .gitignore  .prjInfo  CMakeLists.txt  CheckDB.pro  ConditionTests.pro  EXTENDING.md  FalconView.doxy  FalconView.pro  FalconView.qrc  FalconView_Multi.pro  QtScreen.pro  QtScreen_de_DE.ts  QtTests.pro  QtUi.pro  QtUi.qrc  README.md  TODO.txt  buildFinish  gcodehighlighter.cpp  gcodehighlighter.h  gcodemodel.cpp  gcodemodel.h  labeladapter.cpp  labeladapter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  positionwidget.cpp  positionwidget.h  testaxismask.h  valuemodel.h
src/app/: CMakeLists.txt  app.pro  applicationmode.h  core.cpp  core.h  core_p.h  main.cpp  mainwindow.cpp  mainwindow.h
src/app/LC/: axismask.h  canonif.cpp  canonif.h  canonifsettings.cpp  canonifsettings.h  lcproperties.h  positioncalculator.cpp  toolentry.cpp  toolentry.h  tooltable.h
src/app/LCcomm/: abstractcommandwriter.cpp  abstractcommandwriter.h  commandNMLwriter.cpp  commandNMLwriter.h  commandNetWriter.cpp  commandNetWriter.h  commandwriter.cpp  commandwriter.h  errorreader.cpp  errorreader.h  gcodeinfo.cpp  gcodeinfo.h  positioncalculator.cpp  positioncalculator.h  status.used  statusNMLreader.cpp  statusNMLreader.h  statusNetReader.cpp  statusNetReader.h  statusreader.cpp
src/app/LCinter/: LCInter.cpp  LCInter.h  canonif.cpp  canonif.h  canonifsettings.cpp  canonifsettings.h  insulatePose.h  stupidtoolchangerif.cpp  stupidtoolchangerif.h
src/app/UI/: mainwindow.ui
src/app/control/: abstractstatusreader.cpp  abstractstatusreader.h  dynaaction.cpp  dynaaction.h  falsecondition.cpp  guikernel.cpp  guikernel.h  lckernel.cpp  lckernel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  multistatetoolbutton.cpp  multistatetoolbutton.h  statusupdater.cpp  statusupdater.h  testmain.cpp  testmain.h
src/app/i18n/: FalconView_de_DE.ts
src/app/model/: LCStatus.cpp  LCStatus.h  falconviewdb.cpp  falconviewdb.h  tool.cpp  tool.h  toolcategory.cpp  toolcategory.h
src/app/test/: testDB.cpp  testengine.cpp
src/app/util/: guikernelcreator.cpp  guikernelcreator.h  multistateaction.cpp  multistateaction.h  pluginpagefactory.cpp  pluginpagefactory.h
src/app/view/: aboutdialog.cpp  aboutdialog.h  dockable.cpp  dockable.h  dyndockable.cpp  dyndockable.h  lctooltable.h  micon.cpp  micon.h  plugindialog.cpp  plugindialog.h
src/baselib/: CMakeLists.txt  baselib.pro  baselib_de_DE.ts
src/baselib/control/: KernelInterface.h  abstractcondition.cpp  abstractcondition.h  andcondition.cpp  andcondition.h  applicationmode.h  authenticator.cpp  authenticator.h  core.cpp  core.h  equalcondition.cpp  equalcondition.h  falsecondition.cpp  falsecondition.h  filemanagerclient.h  greatercondition.cpp  greatercondition.h  kernel.cpp  kernel.h  notcondition.cpp  notcondition.h  orcondition.cpp  orcondition.h  smallercondition.cpp  smallercondition.h  truecondition.cpp  truecondition.h
src/baselib/model/: configacc.cpp  configacc.h  configmgr.cpp  configmgr.h  credentials.cpp  credentials.h  direntry.cpp  direntry.h  dirmodel.cpp  dirmodel.h  filemodel.cpp  filemodel.h  httprequest.cpp  httprequest.h  pos9.cpp  pos9.h  sysevent.cpp  sysevent.h  syseventmodel.cpp  syseventmodel.h  valuemanager.cpp  valuemanager.h  valuemodel.cpp  valuemodel.h
src/baselib/util/: axismask.cpp  axismask.h  dbconnection.cpp  dbconnection.h  dbhelper.h  kernelcreator.cpp  kernelcreator.h  timestamp.cpp  timestamp.h
src/baselib/view/: CenterPageInterface.h  GCodeViewerInterface.h  PluginPageInterface.h  ViewPluginInterface.h  abscenterwidget.cpp  abscenterwidget.h  filemanager.cpp  mdieditorinterface.h
src/centerPages/Preview3D/: CMakeLists.txt  Preview3D.qrc  pweditor.cpp  pweditor.h
src/centerPages/SysEventView/: CMakeLists.txt  SysEventView.qrc  syseventview.cpp  syseventview.h
src/guiLib/: CMakeLists.txt  guiLib.pro  guiLib_de_DE.ts
src/guiLib/control/: GuiKernelInterface.h  dynaaction.cpp  dynaaction.h  gcodehighlighter.cpp  gcodehighlighter.h  guicore.cpp  guicore.h  guikernel.cpp  guikernel.h  helpengine.cpp  helpengine.h
src/guiLib/util/: Geom_HelixData.cpp  Geom_HelixData.h  HHelixCurveAdaptor.cpp  HHelixCurveAdaptor.h  HelixCurveAdaptor.cpp  HelixCurveAdaptor.h  HelixCurveAdaptor_CylinderEvaluator.cpp  HelixCurveAdaptor_CylinderEvaluator.h  HelixCurveAdaptor_p.h  ally3d.cpp  ally3d.h  gehelix.cpp  gehelix.h  geline.cpp  geline.h  gerapidmove.cpp  gerapidmove.h  graphicelement.cpp  graphicelement.h  graphicfactory.cpp  graphicfactory.h  pluginpagefactory.cpp
src/guiLib/view/: GCodeEditor.ui  HelpTitle.ui  abscenterwidget.cpp  abscenterwidget.h  centerpage.cpp  centerpage.h  filemanager.cpp  filemanager.h  gcodeeditor.cpp  gcodeeditor.h  gcodeinfo.cpp  helpbrowser.cpp  helpbrowser.h  helpcontentwidget.cpp  helpcontentwidget.h  helpdockable.cpp  helpdockable.h  helpkeywordwidget.cpp  helpkeywordwidget.h  helpview.cpp  helpview.h  jogbutton.cpp  jogbutton.h  numlabel.cpp  numlabel.h  occtviewer.cpp  occtviewer.h  pagestack.cpp  pagestack.h  settingsnb.cpp  settingsnb.h  testEdit.cpp  testEdit.h
src/lcLib/: CMakeLists.txt  lcLib.pro  lcLib.qrc  lcLib_de_DE.ts  lcproperties.cpp  lcproperties.h  toolentry.cpp  toolentry.h  tooltable.cpp  tooltable.h
src/lcLib/UI/: GCodeEditor.ui  HCurCodes.ui
src/lcLib/control/: axismask.cpp  canonif.cpp  canonif.h  canonifsettings.cpp  canonifsettings.h  guicore.cpp  guicore.h  guikernel.cpp  guikernel.h
src/lcLib/model/: lcproperties.cpp  lcproperties.h  linecodes.h  toolentry.cpp
src/lcLib/util/: HelixCurveAdaptor_CylinderEvaluator.cpp  ally3d.cpp  guikernelcreator.cpp  guikernelcreator.h  pluginpagefactory.cpp  pluginpagefactory.h
src/lcLib/view/: abscenterwidget.cpp  abscenterwidget.h  centerpage.cpp  centerpage.h  centerview.cpp  centerview.h  curcodesstatus.cpp  dynframe.cpp  helpdockable.cpp  helpview.cpp  helpview.h  jogbutton.cpp  numlabel.cpp  numlabel.h  pagestack.cpp  pagestack.h  settingsnb.cpp  settingsnb.h  testEdit.cpp  testEdit.h  toolstatus.cpp
src/nbPages/FixtureManager/: CMakeLists.txt  fixtureedit.cpp  (+5 more)
src/plugPages/: CMakeLists.txt  plugPages.pro
(+6498 files in other folders)
